--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="aling-self-center">
-                        <h1 class="display-4"> Suas contas, descomplicadas</h1>
+                        <h1 class="display-4 mt-5"> Suas contas, descomplicadas</h1>
                         <p>Organize sua vida financeira pra ontem, Finans a ferramenta do hoje.</p>
                         <form class="mt-1 mb-4">
                             <div class="input-group input-group-lg">
