--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
-                    <div class="aling-self-center">
+                    <div class="align-self-center">
                         <h1 class="display-4 mt-5"> Suas contas, descomplicadas</h1>
                         <p>Organize sua vida financeira pra ontem, Finans a ferramenta do hoje.</p>
                         <form class="mt-1 mb-4">
@@ -85,6 +85,49 @@
 
         </div>
 
+    </section>
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Saiba para onde vai o seu dinheiro</h2>
+                        <p>
+                            Com o Finans, você categoriza todos os seus lançamentos.
+                            Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <img src="assets/img/saiba.png" class="img-fluid" alt="imagem refencia sem conteudo">
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/img/juros.png" class="img-fluid" alt="imagem refencia sem conteudo">
+
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Pare de pagar juros e economize</h2>
+                        <p>
+                            Manter suas contas em dia é sempre um problema? O Finans avisa sobre você: receba alerta de contas a pagar e a receber!
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     
