--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div>
 
     </section>
-    <section class="caixa">
+
+    <section class="caixa"> <!--/INICIO sabia -->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
@@ -108,8 +109,9 @@
             </div>
         </div>
 
-    </section>
-    <section class="caixa">
+    </section><!--/FIM saiba -->
+
+    <section class="caixa"><!--/INICIO juros -->
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -128,7 +130,58 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section><!--/FIM juros -->
+
+    <section class="caixa"> <!--/INICIO recursos -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"> 
+                    <img src="assets/img/facil.png" class="img-fluid" alt="imagem facil de usar">
+                    <h4>Fácil de usar</h4>
+                    <p>
+                        o Finans vai além do básico e permite que você faça controles incríveis, essencias para suas finanças. Simples como tem que ser!
+                    </p>
+                </div>
+                <div class="col-md-4"> 
+                    <img src="assets/img/economize.png" class="img-fluid" alt="imagem economize">
+                    <h4>Economize seu tempo</h4>
+                    <p>
+                        Tempo é dinheiro! Em segundos, você tem tudo sobre controle e aproveite seu tempo com realmente importa pra você!
+                    </p>
+                </div>
+                <div class="col-md-4"> 
+                    <img src="assets/img/suporte.png" class="img-fluid" alt="imagem facil de usar">
+                    <h4>Suporte amigo</h4>
+                    <p>
+                        Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida mais fácil!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section> <!--/FIM recusos -->
+
+    <footer class="mt-4 mb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 pagHome-footer">
+                    <p>
+                        <a href="#">Home</a>
+                        <a href="#">Recursos</a>
+                        <a href="#">Benefícios</a>
+                        <a href="#">Preços</a>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://www.linkedin.com/in/thalles-jose/" class="btn btn-outline-dark">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/thalles-j" class="btn btn-outline-dark">
+                        <i class="fa-brands fa-square-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     
 </body>
