--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
                         <a href="#">Preços</a>
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <a href="https://www.linkedin.com/in/thalles-jose/" class="btn btn-outline-dark">
-                        <i class="fa-brands fa-linkedin"></i>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="https://www.linkedin.com/in/thalles-jose/" class="btn btn-outline-dark ml-2" target="_blank">
+                        <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/thalles-j" class="btn btn-outline-dark">
-                        <i class="fa-brands fa-square-github"></i>
+                    <a href="https://github.com/thalles-j" class="btn btn-outline-dark ml-2" target="_blank">
+                        <i class="fab fa-github"></i>
                     </a>
                 </div>
             </div>
