--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
+
                 <a href="#" class="navbar-brand">
                     <img src="assets/img/logo.png" width="142" type="png" alt="logo-finans">
                 </a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-main">
-                    <span class="navbar-toggler-icon"> </span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="nav-main">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -41,10 +43,9 @@
                             <a href="#" class="btn btn-outline-light ml-4">Entrar</a>
                         </li>
                     </ul>
-
                 </div>
-            </div>
 
+            </div>
         </nav>
     </header>
 
@@ -185,6 +186,7 @@
 
     
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
