--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 <body class="global">
     <section id="section-box">
         <div class="container container-register" id="container">
-            <div class="form-container sign-up">
+            <div class="form-container sign-up d-flex">
                 <form action="">
                     <h1> Criar uma Conta</h1>
                     <div class="social-icons">
@@ -51,7 +51,7 @@
                 <span>Or use your email for registand</span>
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
-                    <a href="#"> Esqueceu Sua Senha?</a>
+                    <a href="request.html"> Esqueceu Sua Senha?</a>
                     <button>Login</button>
             </form>
             </div>
