--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a href="#" class="nav-link">Preços</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="btn btn-outline-light ml-4">Entrar</a>
+                            <a href="register.html" class="btn btn-outline-light ml-4">Entrar</a>
                         </li>
                     </ul>
                 </div>
@@ -161,7 +161,7 @@
         </div>
     </section> <!--/FIM recusos -->
 
-    <footer class="mt-4 mb-4">
+    <footer class="mt-4 mb-4" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 pagHome-footer">
