--- a/register.html
+++ b/register.html
@@ -10,8 +10,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
     
 </head>
 <body class="global">
@@ -51,7 +49,7 @@
                 <span>Or use your email for registand</span>
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
-                    <a href="request.html"> Esqueceu Sua Senha?</a>
+                    <a href="request.html" class="request-a">  Esqueceu Sua Senha?</a>
                     <button>Login</button>
             </form>
             </div>
