--- a/request.html
+++ b/request.html
@@ -34,8 +34,8 @@
 </head>
     <body>
         <section>
-            <div class="row">
-            <div class="container container-request d-flex col-md-12" id="container">
+            <div class="row col-11">
+            <div class="container container-request d-flex col-md-6" id="container">
                     <form>
                         <h2> Esqueceu sua senha?</h2>
                         
