--- a/request.html
+++ b/request.html
@@ -21,7 +21,7 @@
 
         }
         section{
-            background-color: #ffc107;
+            background-color: #fdfbf4;
             display: flex;
             align-items: center;
             justify-items: center;
