--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 <body class="global">
     <section id="col-9">
         <div class="container container-register" id="container">
-            <div class="form-container sign-up d-flex">
+            <div class="form-container sign-up">
                 <form>
                     <h1> Criar uma Conta</h1>
                     <div class="social-icons">
@@ -46,7 +46,7 @@
                     </a>
                 </div>
 
-                <span>Or use your email for registand</span>
+                <span>Faca login com seu email e senha.</span>
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
                     <a href="request.html" class="request-a">  
@@ -61,14 +61,14 @@
                     <div class="toggle-panel toggle-left">
                         <h1>Seja bem-vindo de volta!!</h1>
                         <p>
-                            entrewa dasdwasd
+                            Entre na sua conta
                         </p>
                         <button class="hidden" id="login">Login</button>
                     </div>
                     <div class="toggle-panel toggle-right">
                         <h1>Vamos comecar?</h1>
                         <p>
-                            entrewa dasdwasd
+                            
                         </p>
                         <button class="hidden" id="register">Cadastre-se</button>
                     </div>
