--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
         <div class="container container-register" id="container">
             <div class="form-container sign-up">
                 <form>
-                    <h1> Criar uma Conta</h1>
+                    <h1>Criar uma Conta</h1>
                     <div class="social-icons">
                         <a href="#" class="icon btn btn-outline-dark"> 
                             <i class="fab fa-google"></i> 
@@ -26,7 +26,7 @@
                             <i class="fa-brands fa-square-facebook fa-lg"></i> 
                         </a>
                     </div>
-                    <span>Or use your email for registand</span>
+                    <span>Use seu melhor email para se registrar.</span>
                     <input type="text" placeholder="Nome">
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
@@ -46,7 +46,7 @@
                     </a>
                 </div>
 
-                <span>Faca login com seu email e senha.</span>
+                <span>Faça login com seu email e senha.</span>
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
                     <a href="request.html" class="request-a">  
