--- a/register.html
+++ b/register.html
@@ -13,8 +13,8 @@
     
 </head>
 <body class="global">
-    <section id="col-9">
-        <div class="container container-register" id="container">
+    <section id="col-10">
+        <div class="container container-register d-flex" id="container">
             <div class="form-container sign-up">
                 <form>
                     <h1>Criar uma Conta</h1>
@@ -67,9 +67,6 @@
                     </div>
                     <div class="toggle-panel toggle-right">
                         <h1>Vamos comecar?</h1>
-                        <p>
-                            
-                        </p>
                         <button class="hidden" id="register">Cadastre-se</button>
                     </div>
                 </div>
