--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                             <a href="#" class="nav-link">Preços</a>
                         </li>
                         <li class="nav-item">
-                            <a href="register.html" class="btn btn-outline-light ml-4">Entrar</a>
+                            <a href="#sobre" class="nav-link">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="register.html" class="btn btn-outline-light ml-md-4" target="_parent">Entrar</a>
                         </li>
                     </ul>
                 </div>
@@ -56,11 +59,11 @@
                     <div class="align-self-center">
                         <h1 class="display-4 mt-5"> Suas contas, descomplicadas</h1>
                         <p>Organize sua vida financeira pra ontem, Finans a ferramenta do hoje.</p>
-                        <form class="mt-1 mb-4">
-                            <div class="input-group input-group-lg">
-                                <input type="text" placeholder="Seu e-mail" class="form-control">
+                        <form class="mt-1 mb-4" action="register.html" method="GET">
+                            <div class="input-group input-group-lg" id="emailForm">
+                                <input type="text" placeholder="Seu e-mail" class="form-control" id="userEmail" required>
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary">Cadastre-se</button>
+                                    <button type="button" class="btn btn-primary" onclick="redirectToRegister()">Cadastre-se</button>
                                 </div>
                             </div>
                         </form>
@@ -180,14 +183,17 @@
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
+                <div class="text-center col-md-12 mt-5" id="sobre" >
+                    <p> Projetado por <a href="https://www.linkedin.com/in/thalles-jose/">Thalles Jose</a></p>
+                </div>
             </div>
         </div>
     </footer>
 
 
 
-
     
+    <script src="assets/script/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
