--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a href="#sobre" class="nav-link">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a href="register.html" class="btn btn-outline-light ml-md-4" target="_parent">Entrar</a>
+                            <a href="register.html" class="btn btn-outline-light ml-md-4" target="_parent" title="Pagina de Login">Entrar</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                             <div class="input-group input-group-lg" id="emailForm">
                                 <input type="text" placeholder="Seu e-mail" class="form-control" id="userEmail" required>
                                 <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary" onclick="redirectToRegister()">Cadastre-se</button>
+                                    <button type="button" class="btn btn-primary" onclick="redirectToRegister()" title="Pagina de Cadastro">Cadastre-se</button>
                                 </div>
                             </div>
                         </form>
@@ -176,10 +176,10 @@
                     </p>
                 </div>
                 <div class="col-md-4  d-flex justify-content-end">
-                    <a href="https://www.linkedin.com/in/thalles-jose/" class="btn btn-outline-dark ml-2" target="_blank">
+                    <a href="https://www.linkedin.com/in/thalles-jose/" class="btn btn-outline-dark ml-2" target="_blank" title="Linkedin">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/thalles-j" class="btn btn-outline-dark ml-2" target="_blank">
+                    <a href="https://github.com/thalles-j" class="btn btn-outline-dark ml-2" target="_blank" title="Github">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
