--- a/register.html
+++ b/register.html
@@ -20,10 +20,10 @@
                     <h1>Criar uma Conta</h1>
                     <div class="social-icons">
                         <a href="#" class="icon btn btn-outline-dark"> 
-                            <i class="fab fa-google"></i> 
+                            <i class="fab fa-google" title="Login Google" ></i> 
                         </a>
                         <a href="#" class="icon btn btn-outline-dark"> 
-                            <i class="fa-brands fa-square-facebook fa-lg"></i> 
+                            <i class="fa-brands fa-square-facebook fa-lg" title="Login Facebook"></i> 
                         </a>
                     </div>
                     <span>Use seu melhor email para se registrar.</span>
@@ -39,10 +39,10 @@
                 <h1>Entre na sua conta</h1>
                 <div class="social-icons">
                     <a href="#" class="icon btn btn-outline-dark"> 
-                        <i class="fab fa-google"></i> 
+                        <i class="fab fa-google" title="Login Google"></i> 
                     </a>
                     <a href="#" class="icon btn btn-outline-dark"> 
-                        <i class="fa-brands fa-square-facebook fa-lg"></i> 
+                        <i class="fa-brands fa-square-facebook fa-lg" title="Login Facebook"></i> 
                     </a>
                 </div>
 
