--- a/register.html
+++ b/register.html
@@ -59,6 +59,7 @@
             <div class="toggle-container">
                 <div class="toggle">
                     <div class="toggle-panel toggle-left">
+                        <img src="assets/img/logo.png" width="142" type="png" alt="logo-finans" class="mb-5">
                         <h1>Seja bem-vindo de volta!!</h1>
                         <p>
                             Entre na sua conta
@@ -66,6 +67,7 @@
                         <button class="hidden" id="login">Login</button>
                     </div>
                     <div class="toggle-panel toggle-right">
+                        <img src="assets/img/logo.png" width="142" type="png" alt="logo-finans" class="mb-5">
                         <h1>Vamos comecar?</h1>
                         <button class="hidden" type="submit" id="register">Cadastre-se</button>
                     </div>
