--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
             <div class="toggle-container">
                 <div class="toggle">
                     <div class="toggle-panel toggle-left">
-                        <img src="assets/img/logo.png" width="142" type="png" alt="logo-finans" class="mb-5">
+                        <a href="index.html" class="mb-5"><img src="assets/img/logo.png"width="142" type="png" alt="logo-finans" ></a> 
                         <h1>Seja bem-vindo de volta!!</h1>
                         <p>
                             Entre na sua conta
@@ -67,7 +67,7 @@
                         <button class="hidden" id="login">Login</button>
                     </div>
                     <div class="toggle-panel toggle-right">
-                        <img src="assets/img/logo.png" width="142" type="png" alt="logo-finans" class="mb-5">
+                        <a href="index.html" class="mb-5"><img src="assets/img/logo.png"width="142" type="png" alt="logo-finans" ></a>
                         <h1>Vamos comecar?</h1>
                         <button class="hidden" type="submit" id="register">Cadastre-se</button>
                     </div>
